# Projects

./: .gitignore  2D array-Task.txt  2D array.py  Dict-Task.txt  Func&Rec-Task.txt  Func&Rec.py  List-Task.txt  List.py  README.md  Regular-Task.txt  Set-Task.txt  Set.py  Test_Image.py  Wiki.py  Yandex-Task.txt  Yandex.py
Freelancing/: 2D array-Task.txt  2D array.py  Dict-Task.txt  Dict.py  Func&Rec-Task.txt  Func&Rec.py  List-Task.txt  List.py  Longest Common Prefix.py  Palindrome Number.py  Regular-Task.txt  Regular.py  Roman to Integer.py  Set-Task.txt  Set.py  Two Sum.py  Wiki-Task.txt  Wiki.py  Yandex-Task.txt  Yandex.py
GitHub/: README.md  ыфва.py
GitHub/Fix/: README.md  (+3 more)
GitHub/Nielsen/lru-cache-api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
GitHub/Nielsen/lru-cache-api/api/v1/: endpoints.py
GitHub/Nielsen/lru-cache-api/app/: cache.py  config.py  main.py  middleware.py  models.py
GitHub/Nielsen/lru-cache-api/tests/: test_api.py
GitHub/Sirius/vacation-manager/: Dockerfile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
GitHub/Sirius/vacation-manager/alembic/: env.py
GitHub/Sirius/vacation-manager/app/: main.py
GitHub/Sirius/vacation-manager/app/api/v1/: endpoints.py
GitHub/Sirius/vacation-manager/app/core/: config.py  db.py
GitHub/Sirius/vacation-manager/app/crud/: __init__.py  crud_vacation.py
GitHub/Sirius/vacation-manager/app/models/: __init__.py  vacation.py
GitHub/Sirius/vacation-manager/app/schemas/: __init__.py  vacation.py
GitHub/Sirius/vacation-manager/tests/: conftest.py  test_api_v1.py
Kuban_result/: Notin.py  first_result.json  second_result.json  Отчет с показателями отделов.py
TEST/: AUCHAN_TEST.py
TG_bots/: Links.txt  T_bot_link.py  T_bot_wiki.py
grandline/: grandline_parser_control_module.py  main.py  requirements.txt  requirements_utf8.txt
ileko/: ileko.py  ileko_parser_control_module.py
kontinental/: kontinental.py  kontinental_parser_control_module.py  requirements.txt
mc/: metall_service.py  metall_service_parser_control_module.py  requirements.txt  test_response.py
medexe/: medexe.py  medexe_parser_control_module.py
mmk/: README.md  mmk.py  mmk_parser_control_module.py  requirements.txt
nlmk/: nlmk.py  nlmk_parser_control_module.py
orinnox/: orinnox.py  orinnox_parser_control_module.py  requirements.txt
ost-m/: ostm.py  ostm_parser_control_module.py
pcc/: README.md  requirements.txt  tg_bot.py
pk-f/: pkf.py  pkf_parser_control_module.py  requirements.txt
rosfitting/: main.py  price.xlsx  requirements.txt  rosfitting_parser_control_module.py
saturn/: README.md  requirements.txt  saturn.py  saturn_parser_control_module.py
tg_bot/: tg_bot.py
(+393 files in other folders)
